--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,3 @@
-APScheduler==3.5.1
-click==6.7
 Flask==1.0.2
-funcsigs==1.0.2
-futures==3.2.0
-itsdangerous==0.24
-Jinja2==2.10
-MarkupSafe==1.0
-pymongo==3.7.0
-pytz==2018.5
-six==1.11.0
-tzlocal==1.5.1
-Werkzeug==0.14.1
+Flask-Cors==3.0.6
+itchat==1.3.10
